linera-views-derive/src/snapshots/linera_views_derive__tests__test_generate_root_view_code_metrics_custom__path__to__ContextType.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_root_view_code(input))
---
impl linera_views::views::RootView<custom::path::to::ContextType> for TestView
where
    Self: Send + Sync,
{
    async fn save(&mut self) -> Result<(), linera_views::ViewError> {
        use linera_views::{
            context::Context, batch::Batch, store::WritableKeyValueStore as _,
            views::View,
        };
        #[cfg(not(target_arch = "wasm32"))]
        linera_views::metrics::increment_counter(
            &linera_views::metrics::SAVE_VIEW_COUNTER,
            stringify!(TestView),
            &self.context().base_key().bytes,
        );
        let mut batch = Batch::new();
        self.register.flush(&mut batch)?;
        self.collection.flush(&mut batch)?;
        if !batch.is_empty() {
            self.context().store().write_batch(batch).await?;
        }
        Ok(())
    }
}
